--- a/Code/PolyphAI.ipynb
+++ b/Code/PolyphAI.ipynb
@@ -2,43 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7d361ffe",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Include necessary imports\n",
     "import os\n",
-    "import numpy as np\n",
-    "import IPython.display as ipd\n",
-    "import torch\n",
-    "from torch import nn\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3c67e7cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocess the data\n",
-    "folder_path = 'RAVDESS/'\n",
-    "# save all the audio files from all the actors\n",
+    "\n",
+    "folder_path = 'Data/'\n",
+    "test = []\n",
+    "train = []\n",
+    "validation = []\n",
     "for dirname in os.listdir(folder_path):\n",
-    "    if dirname != \".DS_Store\":\n",
+    "    if dirname != '.DS_Store':\n",
     "        for filename in os.listdir(folder_path + dirname):\n",
-    "            # add both audio waveform and emotion label\n",
-    "            if (filename.endswith(\".wav\")):\n",
-    "                emotion = filename[7:8]\n",
-    "                # include every emotion except calm since its not included in TESS\n",
-    "                audio_path = folder_path + dirname + \"/\" + filename\n",
-    "                # convert audio to tensor before appending\n",
-    "                data, sample_rate = sf.read(audio_path)\n",
-    "                audio_tensor = torch.tensor(data)\n",
-    "                label = int(emotion) - 1\n",
-    "                audio_data.append((audio_tensor, torch.tensor([label])))"
+    "            df = pd.read_csv(folder_path + dirname + '/' + filename)\n",
+    "            transposed_df = df.transpose()\n",
+    "            if dirname == 'test':\n",
+    "                test.append(transposed_df)\n",
+    "            if dirname == 'train':\n",
+    "                train.append(transposed_df)\n",
+    "            if dirname == 'valid':\n",
+    "                validation.append(transposed_df)"
    ]
   },
   {
