--- a/Code/PolyphAI.ipynb
+++ b/Code/PolyphAI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "7d361ffe",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,12 @@
     "import numpy as np\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n"
+    "from torch.nn.utils.rnn import pad_sequence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "3c67e7cc",
    "metadata": {},
    "outputs": [],
@@ -56,23 +56,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "551e0b42",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Model(torch.nn.Module):\n",
-    "    def __init__(self, input_size, output_size, hidden_dim=40, n_layers=3):\n",
+    "    def __init__(self, input_size, output_size, hidden_dim=40, n_layers=2, dropout_rate=.5):\n",
     "        super(Model, self).__init__()\n",
     "        self.hidden_dim = hidden_dim\n",
     "        self.n_layers = n_layers\n",
-    "        self.lstm = torch.nn.LSTM(input_size, hidden_dim, n_layers, batch_first=True)\n",
+    "        self.lstm = torch.nn.LSTM(input_size, hidden_dim, n_layers, batch_first=True, dropout=dropout_rate)\n",
     "        self.fc = torch.nn.Linear(hidden_dim, output_size)\n",
+    "        self.dropout = torch.nn.Dropout(dropout_rate)\n",
     "        \n",
     "    def forward(self, x, hidden=None):\n",
     "        lstm_output, (h,c) = self.lstm(x, hidden)\n",
+    "        lstm_output = self.dropout(lstm_output)\n",
     "        model_output = self.fc(lstm_output)\n",
-    "        return model_output\n"
+    "        return model_output"
    ]
   },
   {
@@ -85,21 +87,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "511051f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(model, melody, harmonies, optimizer, criterion, num_epochs):\n",
-    "    for epoch in range(num_epochs):\n",
-    "        optimizer.zero_grad()\n",
-    "        output = model(melody)\n",
-    "        loss = criterion(output, harmonies)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        if (epoch + 1) % 100 == 0:\n",
-    "            print(\"Epoch: \", epoch, \"Loss: \", loss)\n",
-    "        model.eval()"
+    "# def train_model(model, optimizer, criterion, num_epochs):\n",
+    "#     for epoch in range(num_epochs):\n",
+    "#         model.train()\n",
+    "#         for song in train:\n",
+    "#             song = key_transposition(song)\n",
+    "#             melody = torch.tensor(normalize_array(song.iloc[0].values.reshape(-1,1)), dtype=torch.float32).unsqueeze(0).reshape(1,song.shape[1],1)\n",
+    "#             harmonies = torch.tensor(normalize_array(song.iloc[1:].values.T), dtype=torch.float32).unsqueeze(0)\n",
+    "       \n",
+    "#             optimizer.zero_grad()\n",
+    "#             output = model(train_melody)\n",
+    "#             loss = criterion(output, train_harmonies)\n",
+    "#             loss.backward()\n",
+    "#             optimizer.step()\n",
+    "#             model.eval()\n",
+    "        \n",
+    "#         with torch.no_grad(): \n",
+    "#             val_output = model(val_melody) \n",
+    "#             val_loss = criterion(val_output, val_harmonies)\n",
+    "            \n",
+    "#         if (epoch + 1) % 100 == 0:\n",
+    "#             print(\"Epoch: \", epoch, \"Loss: \", loss, \"Validation Loss: \", val_loss)\n",
+    "            \n",
+    "def key_transposition(array):\n",
+    "    transpose_val = 48 - array.iloc[3][0]\n",
+    "    array += transpose_val\n",
+    "    return array\n",
+    "\n",
+    "# Min-Max normalization technique\n",
+    "def normalize_array(array):\n",
+    "    X_std = (array - 1) / (88 - 1)\n",
+    "    return X_std       \n",
+    "            \n",
+    "def train_model(model, optimizer, criterion, num_epochs):\n",
+    "    # Iterate through the training songs\n",
+    "    for song_index, song in enumerate(train):\n",
+    "        print(f\"Training on song {song_index + 1}\")\n",
+    "        song = key_transposition(song)\n",
+    "        \n",
+    "        melody = torch.tensor(normalize_array(song.iloc[0].values.reshape(-1, 1)), dtype=torch.float32).unsqueeze(0).reshape(1, song.shape[1], 1)\n",
+    "        harmonies = torch.tensor(normalize_array(song.iloc[1:].values.T), dtype=torch.float32).unsqueeze(0)\n",
+    "\n",
+    "        for epoch in range(num_epochs):\n",
+    "            model.train()\n",
+    "            optimizer.zero_grad()\n",
+    "            output = model(melody)\n",
+    "            loss = criterion(output, harmonies)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            if (epoch + 1) % 100 == 0:\n",
+    "                print(f\"Song {song_index + 1}, Epoch {epoch + 1}/{num_epochs}, Loss: {loss.item()}\")\n",
+    "\n",
+    "        model.eval()\n",
+    "        total_val_loss = 0\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            for val_song in validation:\n",
+    "                val_song = key_transposition(val_song)\n",
+    "                val_melody = torch.tensor(normalize_array(val_song.iloc[0].values.reshape(-1, 1)), dtype=torch.float32).unsqueeze(0).reshape(1, val_song.shape[1], 1)\n",
+    "                val_harmonies = torch.tensor(normalize_array(val_song.iloc[1:].values.T), dtype=torch.float32).unsqueeze(0)\n",
+    "                \n",
+    "                val_output = model(val_melody)\n",
+    "                val_loss = criterion(val_output, val_harmonies)\n",
+    "                total_val_loss += val_loss.item()\n",
+    "\n",
+    "        average_val_loss = total_val_loss / len(validation_set)\n",
+    "        print(f\"Validation Loss after song {song_index + 1}: {average_val_loss}\")"
    ]
   },
   {
@@ -112,47 +171,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:  99 Loss:  tensor(0.0023, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  199 Loss:  tensor(0.0020, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  299 Loss:  tensor(0.0020, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  399 Loss:  tensor(0.0011, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  499 Loss:  tensor(0.0006, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  599 Loss:  tensor(0.0006, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  699 Loss:  tensor(0.0005, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  799 Loss:  tensor(0.0004, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  899 Loss:  tensor(0.0005, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  999 Loss:  tensor(0.0002, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  1099 Loss:  tensor(0.0002, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  1199 Loss:  tensor(0.0002, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  1299 Loss:  tensor(0.0002, grad_fn=<MseLossBackward0>)\n",
-      "Epoch:  1399 Loss:  tensor(0.0002, grad_fn=<MseLossBackward0>)\n"
+      "Training on song 1\n",
+      "Song 1, Epoch 100/5000, Loss: 0.006673984695225954\n"
      ]
     }
    ],
    "source": [
-    "def key_transposition(array):\n",
-    "    array = train[2]\n",
-    "    transpose_val = 48 - array.iloc[3][0]\n",
-    "    array += transpose_val\n",
-    "    return array\n",
-    "\n",
-    "# Min-Max normalization technique\n",
-    "def normalize_array(array):\n",
-    "    X_std = (array - 1) / (88 - 1)\n",
-    "    return X_std\n",
-    "\n",
     "criterion = torch.nn.MSELoss()\n",
-    "epoch = 5000\n",
+    "num_epochs = 5000\n",
     "index = 0\n",
-    "for song in train[:10]:\n",
-    "    index = index + 1\n",
-    "    song = key_transposition(song)\n",
-    "#     song = train[0] # REMOVE\n",
-    "    melody = torch.tensor(normalize_array(song.iloc[0].values.reshape(-1,1)), dtype=torch.float32).unsqueeze(0).reshape(1,song.shape[1],1)\n",
-    "    harmonies = torch.tensor(normalize_array(song.iloc[1:].values.T), dtype=torch.float32).unsqueeze(0)\n",
-    "    model = Model(1, harmonies.shape[2])\n",
-    "    optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
-    "    train_model(model, melody, harmonies, optimizer, criterion, epoch)"
+    "model = Model(1, 3)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
+    "\n",
+    "train_model(model, optimizer, criterion, num_epochs)\n",
+    "\n",
+    "# for song in train[:10]:\n",
+    "#     index = index + 1\n",
+    "#     print(\"song\", index)\n",
+    "#     song = key_transposition(song)\n",
+    "# #     song = train[0] # REMOVE\n",
+    "#     melody = torch.tensor(normalize_array(song.iloc[0].values.reshape(-1,1)), dtype=torch.float32).unsqueeze(0).reshape(1,song.shape[1],1)\n",
+    "#     harmonies = torch.tensor(normalize_array(song.iloc[1:].values.T), dtype=torch.float32).unsqueeze(0)\n",
+    "    \n",
+    "#     train_model(model, melody, harmonies, optimizer, criterion, epoch)"
    ]
   },
   {
@@ -272,11 +313,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "melody = test[0].iloc[0]\n",
+    "test_song = key_transposition(test[0])\n",
+    "melody = test_song.iloc[0]\n",
     "# print(\"melody is: \", torch.tensor(normalize_array(song.iloc[0].values.reshape(-1,1)), dtype=torch.float32).unsqueeze(0).reshape(1,song.shape[1],1))\n",
-    "harmonies = torch.tensor(normalize_array(test[0].iloc[1:].values.T), dtype=torch.float32).unsqueeze(0)\n",
-    "# result = model(torch.tensor(normalize_array(test[0].iloc[0].values.reshape(-1,1)), dtype=torch.float32).unsqueeze(0).reshape(1,test[0].shape[1],1))\n",
-    "output_to_sheet_music(melody, harmonies)"
+    "# harmonies = torch.tensor(normalize_array(test[0].iloc[1:].values.T), dtype=torch.float32).unsqueeze(0)\n",
+    "result = model(torch.tensor(normalize_array(test_song.iloc[0].values.reshape(-1,1)), dtype=torch.float32).unsqueeze(0).reshape(1,test[0].shape[1],1))\n",
+    "output_to_sheet_music(melody, result)"
    ]
   },
   {
