--- a/Code/PolyphAI.ipynb
+++ b/Code/PolyphAI.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "511051f8",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
     "                val_loss = criterion(val_output, val_harmonies)\n",
     "                total_val_loss += val_loss.item()\n",
     "\n",
-    "        average_val_loss = total_val_loss / len(validation_set)\n",
+    "        average_val_loss = total_val_loss / len(validation)\n",
     "        print(f\"Validation Loss after song {song_index + 1}: {average_val_loss}\")"
    ]
   },
@@ -171,8 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on song 1\n",
-      "Song 1, Epoch 100/5000, Loss: 0.006673984695225954\n"
+      "Training on song 1\n"
      ]
     }
    ],
