--- a/Code/PolyphAI.ipynb
+++ b/Code/PolyphAI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "7d361ffe",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import os\n",
     "import torch \n",
     "import pandas as pd\n",
-    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
     "from music21 import *\n",
     "import numpy as np\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "3c67e7cc",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "id": "551e0b42",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 76,
    "id": "511051f8",
    "metadata": {},
    "outputs": [],
@@ -125,40 +125,54 @@
     "    return X_std       \n",
     "            \n",
     "def train_model(model, optimizer, criterion, num_epochs):\n",
-    "    # Iterate through the training songs\n",
+    "    # train songs\n",
     "    for song_index, song in enumerate(train):\n",
     "        print(f\"Training on song {song_index + 1}\")\n",
     "        song = key_transposition(song)\n",
     "        \n",
-    "        melody = torch.tensor(normalize_array(song.iloc[0].values.reshape(-1, 1)), dtype=torch.float32).unsqueeze(0).reshape(1, song.shape[1], 1)\n",
-    "        harmonies = torch.tensor(normalize_array(song.iloc[1:].values.T), dtype=torch.float32).unsqueeze(0)\n",
-    "\n",
+    "        melody_and_bass = []\n",
+    "        melody_and_bass.append(song.iloc[0])\n",
+    "        melody_and_bass.append(song.iloc[3])\n",
+    "        melody_and_bass=pd.DataFrame(melody_and_bass)\n",
+    "#         print((melody_and_bass))\n",
+    "#         print(type(song.iloc[1:]))\n",
+    "#         print(song.iloc[0] + song.iloc[3])\n",
+    "#         melody = torch.tensor(normalize_array(melody_and_bass.values.T), dtype=torch.float32).reshape(1, melody_and_bass.shape[1], 2)\n",
+    "        bass = torch.tensor(normalize_array(song.iloc[3].values.reshape(-1, 1)), dtype=torch.float32).unsqueeze(0).reshape(1, song.shape[1], 1)\n",
+    "        harmonies = torch.tensor(normalize_array(song.iloc[:3].values.T), dtype=torch.float32).unsqueeze(0)\n",
+    "        \n",
     "        for epoch in range(num_epochs):\n",
     "            model.train()\n",
     "            optimizer.zero_grad()\n",
-    "            output = model(melody)\n",
+    "            output = model(bass)\n",
     "            loss = criterion(output, harmonies)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "\n",
     "            if (epoch + 1) % 100 == 0:\n",
     "                print(f\"Song {song_index + 1}, Epoch {epoch + 1}/{num_epochs}, Loss: {loss.item()}\")\n",
+    "                if torch.isnan(loss):\n",
+    "                    print(\"harmonies: \", harmonies)\n",
+    "                    print(\"melody:\" , melody)\n",
+    "                    print(\"output: \", output)\n",
+    "                    \n",
     "\n",
     "        model.eval()\n",
     "        total_val_loss = 0\n",
-    "\n",
-    "        with torch.no_grad():\n",
-    "            for val_song in validation:\n",
-    "                val_song = key_transposition(val_song)\n",
-    "                val_melody = torch.tensor(normalize_array(val_song.iloc[0].values.reshape(-1, 1)), dtype=torch.float32).unsqueeze(0).reshape(1, val_song.shape[1], 1)\n",
-    "                val_harmonies = torch.tensor(normalize_array(val_song.iloc[1:].values.T), dtype=torch.float32).unsqueeze(0)\n",
+    "        \n",
+    "#         # validation songs\n",
+    "#         with torch.no_grad():\n",
+    "#             for val_song in validation_loader:\n",
+    "#                 val_song = key_transposition(val_song)\n",
+    "#                 val_melody = torch.tensor(normalize_array(val_song.iloc[0].values.reshape(-1, 1)), dtype=torch.float32).unsqueeze(0).reshape(1, val_song.shape[1], 1)\n",
+    "#                 val_harmonies = torch.tensor(normalize_array(val_song.iloc[1:].values.T), dtype=torch.float32).unsqueeze(0)\n",
     "                \n",
-    "                val_output = model(val_melody)\n",
-    "                val_loss = criterion(val_output, val_harmonies)\n",
-    "                total_val_loss += val_loss.item()\n",
+    "#                 val_output = model(val_melody)\n",
+    "#                 val_loss = criterion(val_output, val_harmonies)\n",
+    "#                 total_val_loss += val_loss.item()\n",
     "\n",
-    "        average_val_loss = total_val_loss / len(validation)\n",
-    "        print(f\"Validation Loss after song {song_index + 1}: {average_val_loss}\")"
+    "#         average_val_loss = total_val_loss / len(validation)\n",
+    "#         print(f\"Validation Loss after song {song_index + 1}: {average_val_loss}\")"
    ]
   },
   {
@@ -171,7 +185,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on song 1\n"
+      "Training on song 1\n",
+      "Song 1, Epoch 100/5000, Loss: 0.011602784506976604\n",
+      "Song 1, Epoch 200/5000, Loss: 0.005373675841838121\n",
+      "Song 1, Epoch 300/5000, Loss: 0.0029771258123219013\n",
+      "Song 1, Epoch 400/5000, Loss: 0.0019958887714892626\n",
+      "Song 1, Epoch 500/5000, Loss: 0.001237217104062438\n",
+      "Song 1, Epoch 600/5000, Loss: 0.000971946690697223\n",
+      "Song 1, Epoch 700/5000, Loss: 0.0007642423734068871\n",
+      "Song 1, Epoch 800/5000, Loss: 0.0007377205183729529\n",
+      "Song 1, Epoch 900/5000, Loss: 0.0006950875977054238\n",
+      "Song 1, Epoch 1000/5000, Loss: 0.0006802527932450175\n",
+      "Song 1, Epoch 1100/5000, Loss: 0.0006826668977737427\n",
+      "Song 1, Epoch 1200/5000, Loss: 0.0006271681049838662\n",
+      "Song 1, Epoch 1300/5000, Loss: 0.0006516118883155286\n",
+      "Song 1, Epoch 1400/5000, Loss: 0.0006341449916362762\n",
+      "Song 1, Epoch 1500/5000, Loss: 0.0006412179791368544\n",
+      "Song 1, Epoch 1600/5000, Loss: 0.0006330201867967844\n",
+      "Song 1, Epoch 1700/5000, Loss: 0.0006270651938393712\n",
+      "Song 1, Epoch 1800/5000, Loss: 0.0006330730393528938\n",
+      "Song 1, Epoch 1900/5000, Loss: 0.0006320071406662464\n",
+      "Song 1, Epoch 2000/5000, Loss: 0.0006118869641795754\n",
+      "Song 1, Epoch 2100/5000, Loss: 0.0006202767253853381\n",
+      "Song 1, Epoch 2200/5000, Loss: 0.000578395847696811\n",
+      "Song 1, Epoch 2300/5000, Loss: 0.0006136258598417044\n",
+      "Song 1, Epoch 2400/5000, Loss: 0.0005828095600008965\n",
+      "Song 1, Epoch 2500/5000, Loss: 0.000589291681535542\n",
+      "Song 1, Epoch 2600/5000, Loss: 0.0005604329635389149\n",
+      "Song 1, Epoch 2700/5000, Loss: 0.0004992217291146517\n",
+      "Song 1, Epoch 2800/5000, Loss: 0.0005420207744464278\n",
+      "Song 1, Epoch 2900/5000, Loss: 0.0005192366079427302\n",
+      "Song 1, Epoch 3000/5000, Loss: 0.0005664809141308069\n",
+      "Song 1, Epoch 3100/5000, Loss: 0.0004765746707562357\n"
      ]
     }
    ],
@@ -182,7 +227,16 @@
     "model = Model(1, 3)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
     "\n",
+    "# batch_size = 16\n",
+    "\n",
+    "# train_loader = DataLoader(torch.tensor(train), batch_size=batch_size)\n",
+    "# validation_loader = DataLoader(torch.tensor(validation), batch_size=batch_size)\n",
+    "\n",
     "train_model(model, optimizer, criterion, num_epochs)\n",
+    "\n",
+    "\n",
+    "# train_dataset = TensorDataset(torch.tensor(train))\n",
+    "# validation_dataset = TensorDataset(torch.tensor(validation))\n",
     "\n",
     "# for song in train[:10]:\n",
     "#     index = index + 1\n",
@@ -406,8 +460,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a6fb6748",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "array1 = np.array([1, 2, 3])\n",
+    "array2 = np.array([4, 5, 6])\n",
+    "\n",
+    "result = np.concatenate((array1, array2))\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f87ba97e",
    "metadata": {},
    "outputs": [],
    "source": []
