song normalization finished, all in C major or A minor

--- a/Code/TEMP-PolyphAI.ipynb
+++ b/Code/TEMP-PolyphAI.ipynb
@@ -34,11 +34,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 401,
    "id": "1202ed21",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_pitch_class(note):\n",
+    "    return note % 12\n",
+    "\n",
+    "def find_matching_octave_note(df):\n",
+    "    bass_line = df['note3'].values\n",
+    "    last_bass_note = bass_line[-1]\n",
+    "    return last_bass_note\n",
+    "\n",
+    "def explore_for_lowest_tonic(df, pitch_class):\n",
+    "    bass_notes = df['note3'].values  \n",
+    "    matching_notes = [note for note in bass_notes if get_pitch_class(note) == pitch_class]\n",
+    "    if matching_notes:\n",
+    "        return min(matching_notes) \n",
+    "    else:\n",
+    "        return bass_notes[0]\n",
+    "\n",
+    "def detect_tonic(df):\n",
+    "    candidate_note = find_matching_octave_note(df)\n",
+    "    pitch_class = get_pitch_class(candidate_note)\n",
+    "    true_tonic_note = explore_for_lowest_tonic(df, pitch_class)\n",
+    "    return true_tonic_note\n",
+    "\n",
+    "def is_major(df):\n",
+    "    chord_notes = df.iloc[0, :4].values\n",
+    "    unique_pitch_classes = set(note % 12 for note in chord_notes)\n",
+    "    \n",
+    "    for root in unique_pitch_classes:\n",
+    "        intervals = sorted((note - root) % 12 for note in unique_pitch_classes if note != root)\n",
+    "        if 4 in intervals and 7 in intervals:\n",
+    "            return True\n",
+    "        \n",
+    "        if 3 in intervals and 7 in intervals:\n",
+    "            return False\n",
+    "    \n",
+    "    return False\n",
+    "\n",
+    "def key_transposition(df):\n",
+    "    tonic_note = detect_tonic(df)\n",
+    "    transpose_val = 48 if is_major(df) else 45\n",
+    "    transpose_val -= tonic_note \n",
+    "    df = (df + transpose_val).clip(lower=0, upper=127)\n",
+    "    return df\n",
+    "\n",
     "def encode_song(song):\n",
     "    result = []\n",
     "    prev = {'note0': -1, 'note1': -1, 'note2': -1, 'note3': -1}\n",
@@ -59,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 402,
    "id": "28b12a87",
    "metadata": {},
    "outputs": [],
@@ -84,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 403,
    "id": "b5ff2793",
    "metadata": {},
    "outputs": [],
@@ -137,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 404,
    "id": "3003dc27",
    "metadata": {},
    "outputs": [],
@@ -212,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": null,
    "id": "df64d219",
    "metadata": {
     "scrolled": true
@@ -222,116 +265,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Song 1, Epoch 10/100, Loss: 5.138826847076416\n",
-      "Song 1, Epoch 20/100, Loss: 5.098159313201904\n",
-      "Song 1, Epoch 30/100, Loss: 4.977606773376465\n",
-      "Song 1, Epoch 40/100, Loss: 4.549571990966797\n",
-      "Song 1, Epoch 50/100, Loss: 4.185001850128174\n",
-      "Song 1, Epoch 60/100, Loss: 4.035775661468506\n",
-      "Song 1, Epoch 70/100, Loss: 3.970472812652588\n",
-      "Song 1, Epoch 80/100, Loss: 3.9295005798339844\n",
-      "Song 1, Epoch 90/100, Loss: 3.9066169261932373\n",
-      "Song 1, Epoch 100/100, Loss: 3.896476984024048\n",
-      "Validation loss: 5.312666281675681\n",
-      "Song 2, Epoch 10/100, Loss: 4.404332160949707\n",
-      "Song 2, Epoch 20/100, Loss: 4.199508190155029\n",
-      "Song 2, Epoch 30/100, Loss: 4.06709623336792\n",
-      "Song 2, Epoch 40/100, Loss: 4.0031914710998535\n",
-      "Song 2, Epoch 50/100, Loss: 3.930015802383423\n",
-      "Song 2, Epoch 60/100, Loss: 3.895909309387207\n",
-      "Song 2, Epoch 70/100, Loss: 3.8473329544067383\n",
-      "Song 2, Epoch 80/100, Loss: 3.8211450576782227\n",
-      "Song 2, Epoch 90/100, Loss: 3.7989022731781006\n",
-      "Song 2, Epoch 100/100, Loss: 3.781846046447754\n",
-      "Validation loss: 4.908000921591734\n",
-      "Song 3, Epoch 10/100, Loss: 4.394452095031738\n",
-      "Song 3, Epoch 20/100, Loss: 4.177935600280762\n",
-      "Song 3, Epoch 30/100, Loss: 4.084123611450195\n",
-      "Song 3, Epoch 40/100, Loss: 4.005964279174805\n",
-      "Song 3, Epoch 50/100, Loss: 3.9721620082855225\n",
-      "Song 3, Epoch 60/100, Loss: 3.9295120239257812\n",
-      "Song 3, Epoch 70/100, Loss: 3.918026924133301\n",
-      "Song 3, Epoch 80/100, Loss: 3.8688242435455322\n",
-      "Song 3, Epoch 90/100, Loss: 3.880976676940918\n",
-      "Song 3, Epoch 100/100, Loss: 3.8782401084899902\n",
-      "Validation loss: 4.906765094170203\n",
-      "Song 4, Epoch 10/100, Loss: 4.040714263916016\n",
-      "Song 4, Epoch 20/100, Loss: 4.001055717468262\n",
-      "Song 4, Epoch 30/100, Loss: 3.93385910987854\n",
-      "Song 4, Epoch 40/100, Loss: 3.9066295623779297\n",
-      "Song 4, Epoch 50/100, Loss: 3.858208179473877\n",
-      "Song 4, Epoch 60/100, Loss: 3.856586217880249\n",
-      "Song 4, Epoch 70/100, Loss: 3.838935375213623\n",
-      "Song 4, Epoch 80/100, Loss: 3.800234317779541\n",
-      "Song 4, Epoch 90/100, Loss: 3.7647039890289307\n",
-      "Song 4, Epoch 100/100, Loss: 3.765995979309082\n",
-      "Validation loss: 4.964108919486021\n",
-      "Song 5, Epoch 10/100, Loss: 4.104816436767578\n",
-      "Song 5, Epoch 20/100, Loss: 3.931248903274536\n",
-      "Song 5, Epoch 30/100, Loss: 3.8259313106536865\n",
-      "Song 5, Epoch 40/100, Loss: 3.7736411094665527\n",
-      "Song 5, Epoch 50/100, Loss: 3.7276933193206787\n",
-      "Song 5, Epoch 60/100, Loss: 3.689394950866699\n",
-      "Song 5, Epoch 70/100, Loss: 3.6617166996002197\n",
-      "Song 5, Epoch 80/100, Loss: 3.6388237476348877\n",
-      "Song 5, Epoch 90/100, Loss: 3.586191177368164\n",
-      "Song 5, Epoch 100/100, Loss: 3.5428266525268555\n",
-      "Validation loss: 5.07202270703438\n",
-      "Song 6, Epoch 10/100, Loss: 3.7299273014068604\n",
-      "Song 6, Epoch 20/100, Loss: 3.6444320678710938\n",
-      "Song 6, Epoch 30/100, Loss: 3.5990216732025146\n",
-      "Song 6, Epoch 40/100, Loss: 3.5368669033050537\n",
-      "Song 6, Epoch 50/100, Loss: 3.4896650314331055\n",
-      "Song 6, Epoch 60/100, Loss: 3.4525675773620605\n",
-      "Song 6, Epoch 70/100, Loss: 3.423553943634033\n",
-      "Song 6, Epoch 80/100, Loss: 3.408317804336548\n",
-      "Song 6, Epoch 90/100, Loss: 3.3454742431640625\n",
-      "Song 6, Epoch 100/100, Loss: 3.322909116744995\n",
-      "Validation loss: 5.086118392455272\n",
-      "Song 7, Epoch 10/100, Loss: 3.804887056350708\n",
-      "Song 7, Epoch 20/100, Loss: 3.7138993740081787\n",
-      "Song 7, Epoch 30/100, Loss: 3.6687405109405518\n",
-      "Song 7, Epoch 40/100, Loss: 3.6222939491271973\n",
-      "Song 7, Epoch 50/100, Loss: 3.5943644046783447\n",
-      "Song 7, Epoch 60/100, Loss: 3.5644044876098633\n",
-      "Song 7, Epoch 70/100, Loss: 3.540571689605713\n",
-      "Song 7, Epoch 80/100, Loss: 3.5020017623901367\n",
-      "Song 7, Epoch 90/100, Loss: 3.4866816997528076\n",
-      "Song 7, Epoch 100/100, Loss: 3.4704060554504395\n",
-      "Validation loss: 4.8371501457996855\n",
-      "Song 8, Epoch 10/100, Loss: 3.8520219326019287\n",
-      "Song 8, Epoch 20/100, Loss: 3.762347936630249\n",
-      "Song 8, Epoch 30/100, Loss: 3.6664559841156006\n",
-      "Song 8, Epoch 40/100, Loss: 3.601278781890869\n",
-      "Song 8, Epoch 50/100, Loss: 3.5480594635009766\n",
-      "Song 8, Epoch 60/100, Loss: 3.5055572986602783\n",
-      "Song 8, Epoch 70/100, Loss: 3.4816014766693115\n",
-      "Song 8, Epoch 80/100, Loss: 3.429710626602173\n",
-      "Song 8, Epoch 90/100, Loss: 3.4105145931243896\n",
-      "Song 8, Epoch 100/100, Loss: 3.373826026916504\n",
-      "Validation loss: 4.909068168737949\n",
-      "Song 9, Epoch 10/100, Loss: 3.7275822162628174\n",
-      "Song 9, Epoch 20/100, Loss: 3.577346086502075\n",
-      "Song 9, Epoch 30/100, Loss: 3.4769341945648193\n",
-      "Song 9, Epoch 40/100, Loss: 3.4189345836639404\n",
-      "Song 9, Epoch 50/100, Loss: 3.367990016937256\n",
-      "Song 9, Epoch 60/100, Loss: 3.321927070617676\n",
-      "Song 9, Epoch 70/100, Loss: 3.26977801322937\n",
-      "Song 9, Epoch 80/100, Loss: 3.1959822177886963\n",
-      "Song 9, Epoch 90/100, Loss: 3.1846983432769775\n",
-      "Song 9, Epoch 100/100, Loss: 3.132875919342041\n",
-      "Validation loss: 4.937877520536765\n",
-      "Song 10, Epoch 10/100, Loss: 3.374516248703003\n",
-      "Song 10, Epoch 20/100, Loss: 3.277667999267578\n",
-      "Song 10, Epoch 30/100, Loss: 3.235015630722046\n",
-      "Song 10, Epoch 40/100, Loss: 3.182069778442383\n",
-      "Song 10, Epoch 50/100, Loss: 3.1514780521392822\n",
-      "Song 10, Epoch 60/100, Loss: 3.1110117435455322\n",
-      "Song 10, Epoch 70/100, Loss: 3.0808732509613037\n",
-      "Song 10, Epoch 80/100, Loss: 3.07267689704895\n",
-      "Song 10, Epoch 90/100, Loss: 3.0373079776763916\n",
-      "Song 10, Epoch 100/100, Loss: 2.989401340484619\n",
-      "Validation loss: 5.206021541204208\n"
+      "Song 1, Epoch 10/100, Loss: 5.127753257751465\n",
+      "Song 1, Epoch 20/100, Loss: 5.079412460327148\n",
+      "Song 1, Epoch 30/100, Loss: 4.916849136352539\n",
+      "Song 1, Epoch 40/100, Loss: 4.4575371742248535\n",
+      "Song 1, Epoch 50/100, Loss: 4.132639408111572\n",
+      "Song 1, Epoch 60/100, Loss: 3.9968533515930176\n"
      ]
     }
    ],
