moved code into python files

--- a/Code/TEMP-PolyphAI.ipynb
+++ b/Code/TEMP-PolyphAI.ipynb
@@ -268,7 +268,18 @@
      "output_type": "stream",
      "text": [
       "Song 1, Epoch 10/120, Loss: 5.016073703765869\n",
-      "Song 1, Epoch 20/120, Loss: 4.260134220123291\n"
+      "Song 1, Epoch 20/120, Loss: 4.260134220123291\n",
+      "Song 1, Epoch 30/120, Loss: 3.8794071674346924\n",
+      "Song 1, Epoch 40/120, Loss: 3.824371337890625\n",
+      "Song 1, Epoch 50/120, Loss: 3.7636351585388184\n",
+      "Song 1, Epoch 60/120, Loss: 3.70125412940979\n",
+      "Song 1, Epoch 70/120, Loss: 3.6285712718963623\n",
+      "Song 1, Epoch 80/120, Loss: 3.554168462753296\n",
+      "Song 1, Epoch 90/120, Loss: 3.478407382965088\n",
+      "Song 1, Epoch 100/120, Loss: 3.4124066829681396\n",
+      "Song 1, Epoch 110/120, Loss: 3.333796262741089\n",
+      "Song 1, Epoch 120/120, Loss: 3.223142623901367\n",
+      "Validation loss: 5.236736199794671\n"
      ]
     }
    ],
